--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/styles/app.css">
   </head>
 
-  <body>
+  <body ng-app="todoIt">
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -42,10 +42,6 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="/js/socket.io.js"></script>
-    <script type="text/javascript" src="/js/sails.io.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/app.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js" data-main="/js/main"></script>
   </body>
 </html>
