Added Angular Controllers

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,6 +25,9 @@
             <li class="<% if (title === 'Home') { %>active<% } %>">
               <%- link_to('Home', '/') %>
             </li>
+            <li class="<% if (title === 'List') { %>active<% } %>">
+              <%- link_to('List', '/list') %>
+            </li>
             <li class="<% if (title === 'About') { %>active<% } %>">
               <%- link_to('About', '/about') %>
             </li>
